k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kyklos
  labels:
    name: kyklos
    app.kubernetes.io/part-of: kyklos
